--- a/playground/switch-statements.html
+++ b/playground/switch-statements.html
@@ -10,7 +10,66 @@
 
 
 <body>
+  <style>
+    .turt {
+      position: relative;
+      --x: 0px;
+      --y: 0px;
+      --rotateX: 0;
+      --rotate: 0;
+      transform:  translateX(var(--x)) translateY(var(--y))rotateY(var(--rotateX)) rotate(var(--rotate));
+      transition: transform 0.2s;
+    }
 
+  </style>
+  <img width="200" src="./turtle.png" alt"turt" class="turt">
+
+  <script>
+    const turtle = document.querySelector(".turt");
+
+    let x = 0;
+    let y = 0;
+    const speed = 5;
+    let flipped = false;
+    let rotate = 0;
+
+    function handleKeyDown(event) {
+  // if its not an rrow key we dont care
+      if (!event.key.includes("Arrow")) return;
+      switch (event.key) {
+        case "ArrowUp":
+          y -= 1;
+          rotate = -90;
+          break;
+        case "ArrowDown":
+          y += 1;
+          rotate = 90;
+          break;
+        case "ArrowLeft":
+          x -= 1;
+          rotate = 0;
+          flipped = true;
+          break;
+        case "ArrowRight":
+          x += 1;
+          rotate = 0;
+          flipped = false;
+          break;
+        default:
+          console.log("Not a valid move");
+      }
+      turtle.setAttribute(
+    "style",
+    `
+      --x: ${x * speed}px; 
+      --y: ${y * speed}px;
+      --rotateX: ${flipped ? "180deg" : "0"};
+      --rotate: ${rotate}deg;
+      `
+  );
+    }
+    window.addEventListener("keydown", handleKeyDown);
+  </script>
 </body>
 
 </html>
