--- a/playground/arrays-FINISHED.html
+++ b/playground/arrays-FINISHED.html
@@ -12,45 +12,38 @@
 
 <body>
   <script>
-    const names = ['wes', 'kait', 'snickers'];
+    const names = ["wes", "kait", "snickers"];
 
     console.log(names[0]);
     console.log(names.length);
     console.log(names[names.length - 1]);
 
-    names.push('lux');
+    names.push("lux");
     console.log(names);
-    const names2 = [...names, 'lux'];
-    names.unshift('poppy');
+    const names2 = [...names, "lux"];
+    names.unshift("poppy");
     console.log(names);
-    const names3 = ['poppy', ...names];
+    const names3 = ["poppy", ...names];
     console.log(names3);
 
-    const bikes = ['bianchi', 'miele', 'panasonic', 'miyata'];
-    const newBikes = [
-      ...bikes.slice(0, 2),
-      'benotto',
-      ...bikes.slice(2)
-    ];
+    const bikes = ["bianchi", "miele", "panasonic", "miyata"];
+    const newBikes = [...bikes.slice(0, 2), "benotto", ...bikes.slice(2)];
 
-    const newBikes2 = [
-      ...newBikes.slice(0, 3),
-      ...newBikes.slice(4)
-    ];
+    const newBikes2 = [...newBikes.slice(0, 3), ...newBikes.slice(4)];
     console.log(newBikes2);
 
     //
     const comments = [
-      { text: 'Cool Beans', id: 123 },
-      { text: 'Love this', id: 133 },
-      { text: 'Neato', id: 233 },
-      { text: 'good bikes', id: 333 },
-      { text: 'so good', id: 433 },
+      { text: "Cool Beans", id: 123 },
+      { text: "Love this", id: 133 },
+      { text: "Neato", id: 233 },
+      { text: "good bikes", id: 333 },
+      { text: "so good", id: 433 },
     ];
 
     function deleteComment(id, comments) {
       // first find the index of the item in the array
-      const commentIndex = comments.findIndex(comment => comment.id === id);
+      const commentIndex = comments.findIndex((comment) => comment.id === id);
       // make a new array without that item in it
       return [
         ...comments.slice(0, commentIndex),
@@ -59,12 +52,12 @@
       // return our new array
     }
 
-    const kaitIndex = names.findIndex(name => name === 'kait');
+    const kaitIndex = names.findIndex((name) => name === "kait");
     const newNamesWithOutKait = [
       // get everything up to kait index
       ...names.slice(0, kaitIndex),
       // everything after Kait index
-      ...names.slice(kaitIndex + 1)
+      ...names.slice(kaitIndex + 1),
     ];
     console.log(newNamesWithOutKait);
 
@@ -86,7 +79,6 @@
     // const pizzaSlice = numbers.slice(2, 5);
     // console.log(pizzaSlice);
     // console.log(numbers);
-
   </script>
 </body>
 
