started sarcastic text generator

--- a/exercises/46 - Arrays/array-methods-FINISHED.html
+++ b/exercises/46 - Arrays/array-methods-FINISHED.html
@@ -130,6 +130,7 @@
       Callback Methods
     */
 
+    // SEVERAL VERSIONS OF SAME THING HERE //
     // find the first rating that talks about a burger with find()
 
     // function findBurgRating(singleFeedback) {
@@ -155,6 +156,7 @@
       }
     }
 
+    // findByWork('burg') in turn returns a function 
     const burgRating = feedback.find(findByWord('burg'));
     const smoothieRating = feedback.find(findByWord('Smoothie'));
 
